--- a/KoketSite/app/design/frontend/base/default/template/email/order/items/order/default.phtml
+++ b/KoketSite/app/design/frontend/base/default/template/email/order/items/order/default.phtml
@@ -28,7 +28,10 @@
 <?php $_order = $this->getItem()->getOrder() ?>
 <tr>
     <td align="left" valign="top" style="font-size:11px; padding:3px 9px; border-bottom:1px dotted #CCCCCC;">
-        <strong style="font-size:11px;"><?php echo $this->escapeHtml($_item->getName()) ?></strong>
+        <strong style="font-size:11px;">
+            <?php $p = Mage::getModel('catalog/product');
+                  $p ->load($_item->getProductId());
+                  echo '<a href="'. $p->getProductUrl() . '">' . $this->escapeHtml($_item->getName()) . "</a>"?> </strong>
         <?php if ($this->getItemOptions()): ?>
         <dl style="margin:0; padding:0;">
             <?php foreach ($this->getItemOptions() as $option): ?>
