--- a/KoketSite/app/design/frontend/rwd/default/template/aw_blog/blog.phtml
+++ b/KoketSite/app/design/frontend/rwd/default/template/aw_blog/blog.phtml
@@ -7,7 +7,7 @@
 <?php //echo $this->getChildHtml('aw_blog_comments_toolbar'); ?>
 <?php foreach ($posts as $post): ?>
     <div class="postWrapper">
-        <div class="postTitle">
+        <div class="postTitle blog">
             <h2><a href="<?php echo $post->getAddress(); ?>" ><?php echo $post->getTitle(); ?></a></h2>
             <h3><?php echo $post->getCreatedTime(); ?></h3>
         </div>
