--- a/KoketSite/app/design/frontend/rwd/default/template/aw_blog/cat.phtml
+++ b/KoketSite/app/design/frontend/rwd/default/template/aw_blog/cat.phtml
@@ -3,7 +3,7 @@
  <?php echo $this->getChildHtml('aw_blog_comments_toolbar'); ?>
     <?php foreach ($posts as $post): ?>
         <div class="postWrapper">
-            <div class="postTitle">
+            <div class="postTitle t2">
                 <h2><a href="<?php echo $post->getAddress(); ?>" ><?php echo $post->getTitle(); ?></a></h2>
                 <h3><?php echo $post->getCreatedTime(); ?></h3>
             </div>
