--- a/KoketSite/app/design/frontend/rwd/default/template/aw_blog/post.phtml
+++ b/KoketSite/app/design/frontend/rwd/default/template/aw_blog/post.phtml
@@ -1,7 +1,7 @@
 <?php $post = $this->getPost(); ?>
 <div id="messages_product_view"><?php echo $this->getMessagesBlock()->getGroupedHtml() ?></div>
 <div class="postWrapper">
-    <div class="postTitle">
+    <div class="postTitle gert">
         <h2><?php echo $post->getTitle(); ?></h2>
         <h3><?php echo $post->getCreatedTime(); ?></h3>
     </div>
