--- a/KoketSite/skin/frontend/shopper/koket/css/override.css
+++ b/KoketSite/skin/frontend/shopper/koket/css/override.css
@@ -349,7 +349,7 @@ header.fixed a.logo {
 /*}*/
 .page-title-bg {
     background-color: #f5f5f3;
-    background-image: url("/skin/frontend/shopper/default/images/pattern-logo.gif");
+    background-image: url("/skin/frontend/shopper/default/images/pattern-logo-sint.gif?5");
 }
 .cart .cart-collaterals h2 {
     letter-spacing: normal;
@@ -920,6 +920,47 @@ div#gifts {
     display: block;
 }
 
+#gifts ul.teaser-list {
+    margin: 0;
+    padding: 0;
+    white-space: nowrap;
+    width: 220px;
+    overflow-x: auto;
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    #gifts ul.teaser-list {
+        width: 520px;
+    }
+}
+
+@media only screen and (min-width: 960px) and (max-width: 1200px) {
+    #gifts ul.teaser-list {
+        width: 820px;
+    }
+}
+
+@media only screen and (min-width: 1201px) {
+    #gifts ul.teaser-list {
+        width: 1090px;
+    }
+}
+
+
+
+
+
+#gifts ul.teaser-list li {
+    display: inline;
+    width: 100px;
+    height: 100px;
+}
+
+.teaser-list a {
+    text-decoration: initial;
+}
+
 #gifts .label {
     font-size: 24px;
     font-family: Yanone Kaffeesatz;
@@ -947,15 +988,19 @@ div#gifts {
     margin: 10px 10px 3px 0px;
 }
 
+@media only screen and (min-width: 768px){
+    .regular-price {
+        display: inline;
+    }
+    .special-price {
+        display: inline;
+        margin: 0 34px;
+    }
+}
+
 @media only screen and (max-width: 479px){
 
-    div#gifts {
 
-    }
-
-    #gifts .cycle-slide {
-
-    }
 
     #gifts button {
         padding-top: 10px;
@@ -1809,4 +1854,8 @@ form#postComment  .input-box {
 
 .product-view .product-shop .price-box .price {
     font-size: 32px;
+}
+
+.product-category-title {
+    border-top: 0px solid;
 }
