--- a/KoketSite/app/design/adminhtml/default/default/template/sales/order/totals.phtml
+++ b/KoketSite/app/design/adminhtml/default/default/template/sales/order/totals.phtml
@@ -32,6 +32,8 @@
     <?php echo $this->getChildHtml('footer'); ?>
 </table>
 <?php endif;*/ ?>
+<!--GERT: add print receipt button e.o. -->
+<script type="text/javascript" src="https://www.kokettekatinka.be/koket/printReceipt.js?1"></script>
 <table cellspacing="0" width="100%">
     <col />
     <col width="1" />
