--- a/KoketSite/app/design/frontend/shopper/koket/template/page/html/header.phtml
+++ b/KoketSite/app/design/frontend/shopper/koket/template/page/html/header.phtml
@@ -37,6 +37,37 @@ if ( $config['design']['below_logo'] ) {
 
 ?>
 
+<?php
+
+//GERT
+//seasons greetings
+function isBetweenDates($startDate, $endDate) {
+    $now = new DateTime("now");
+    return $now > new DateTime(date("Y") . "-" . $startDate) && $now < new DateTime(date("Y") . "-" . $endDate);
+    //return true;
+}
+$fest = "";
+if (isBetweenDates("12-04 00:00:00","12-06 23:59:00")) {
+    $fest = "-sint";
+} else if (isBetweenDates("12-07 00:00:00","12-31 23:59:00")) {
+    $fest = "-xmas1";
+} else if (isBetweenDates("01-01 00:00:00","15-01 23:59:00")) {
+    $fest = "-xmas2";
+} else if (isBetweenDates("02-10 00:00:00","02-13 23:59:00")) {
+    $fest = "-hearts";
+}
+
+
+?>
+
+<style>
+    .page-title-bg {
+        background-color: #f5f5f3;
+        background-image: url("/skin/frontend/shopper/default/images/pattern-logo<?php echo $fest ?>.gif?10");
+    }
+</style>
+
+
 <!--[if lte IE 9]>
 <div class="old-browser-notice">
     Opgelet! Je gebruikt een oude internet browser, waardoor je surfervaring niet optimaal zal zijn. <br/>
@@ -132,3 +163,4 @@ if ( $config['design']['below_logo'] ) {
 ?>
 <!-- HEADER EOF -->
 <?php echo $this->getChildHtml('slideshow'); ?>
+
