--- a/KoketSite/skin/frontend/shopper/koket/css/override.css
+++ b/KoketSite/skin/frontend/shopper/koket/css/override.css
@@ -205,8 +205,15 @@ header a.logo {
 }
 
 .info-banner .regular {
-    width: 532px;
+    width: 812px;
     margin-right: 30px;
+}
+
+@media only screen and (max-width: 1200px) {
+    .info-banner .regular {
+        width: 532px;
+        margin-right: 30px;
+    }
 }
 
 .info-banner .item .calc-price-box {
@@ -347,10 +354,7 @@ header.fixed a.logo {
     /*background-color: #D8BCD8 !important;*/
     /*background: #D8BCD8 !important;*/
 /*}*/
-.page-title-bg {
-    background-color: #f5f5f3;
-    background-image: url("/skin/frontend/shopper/default/images/pattern-logo-sint.gif?5");
-}
+
 .cart .cart-collaterals h2 {
     letter-spacing: normal;
 }
@@ -1814,6 +1818,20 @@ form#postComment  .input-box {
 }
 
 
+body.blog-index-list .col-main p, body.blog-post-view .col-main p {
+    font-size: 24px;
+    font-family: "Yanone Kaffeesatz";
+    font-weight: 100;
+}
+
+body.blog-index-list .col-main h2, body.blog-post-view .col-main h2 {
+    font-family: "Yanone Kaffeesatz";
+    font-weight: 400;
+    font-size: 28px;
+    text-transform: uppercase;
+}
+
+
 .block.block-blog p {
     padding: 10px 30px;
 }
@@ -1859,3 +1877,168 @@ form#postComment  .input-box {
 .product-category-title {
     border-top: 0px solid;
 }
+
+.sendcloudspp .btn {
+    background-color: #9FCE8A !important;
+    font-size: smaller !important;
+    margin-left: 19px;
+    margin-top: 5px;
+    border-color: white !important;
+}
+
+.sendcloudspp span.ng-binding.ng-scope {
+    margin-left: 20px;
+}
+
+.sendcloudspp .list-group-item.active, .sendcloudspp .list-group-item.active:focus, .sendcloudspp .list-group-item.active:hover {
+    z-index: 2;
+    color: #fff;
+    background-color: #9FCE8A !important;
+    border-color: white !important;
+}
+
+.sendcloudspp .list-group-item.active .list-group-item-text, .sendcloudspp .list-group-item.active:focus .list-group-item-text, .sendcloudspp .list-group-item.active:hover .list-group-item-text {
+    color: #E8FBE0 !important;
+}
+
+.sendcloudspp .btn-default {
+    color: white !important;
+
+}
+
+.sendcloudspp .ngdialog.ngdialog-theme-default .ngdialog-content {
+    font-family: 'Maven+Pro', Tahoma, sans-serif !important;
+}
+
+.sendcloudspp .h1, .sendcloudspp .h2, .sendcloudspp .h3, .sendcloudspp .h4, .sendcloudspp .h5, .sendcloudspp .h6, .sendcloudspp h1, .sendcloudspp h2, .sendcloudspp h3, .sendcloudspp h4, .sendcloudspp h5, .sendcloudspp h6 {
+    font-family: "Yanone Kaffeesatz", Tahoma, Arial, sans-serif !important;
+}
+
+.sendcloudspp .list-group-item-text {
+   font-size: 0.8rem;
+}
+
+#checkout-step-shipping_method .shipping-info {
+    padding: 1px 0px 11px 20px;
+    font-size: .8rem;
+}
+
+#checkout-step-shipping_method .shipping-info li{
+    list-style: disc;
+    margin-left: 24px;
+    line-height: normal;
+}
+
+button.btn-shipping-info {
+    padding: 3px 3px;
+    background-color: #D3F5C3;
+    border-width: 0;
+    border-radius: 4px;
+    font-size: 0.7rem;
+}
+
+/**START products with similar colors box **/
+
+    .similar {
+        overflow: hidden;
+        margin: 0px;
+        padding: 10px;
+    }
+
+    .similar .holder {
+        margin-top: 18px;
+    }
+
+    .similar .box {
+        float: left;
+        position: relative;
+        width: 20%;
+        padding-bottom: 20%;
+    }
+
+
+    @media only screen and (max-width : 480px) {
+        /* Smartphone view: 1 tile */
+        .similar .box {
+            width: 100%;
+            padding-bottom: 100%;
+        }
+    }
+    @media only screen and (max-width : 650px) and (min-width : 481px) {
+        /* Tablet view: 2 tiles */
+        .similar .box {
+            width: 50%;
+            padding-bottom: 50%;
+        }
+    }
+    @media only screen and (max-width : 1050px) and (min-width : 651px) {
+        /* Small desktop / ipad view: 3 tiles */
+        .similar .box {
+            width: 33.3%;
+            padding-bottom: 33.3%;
+        }
+    }
+    @media only screen and (max-width : 1290px) and (min-width : 1051px) {
+        /* Medium desktop: 4 tiles */
+        .similar .box {
+            width: 25%;
+            padding-bottom: 25%;
+        }
+    }
+
+    .similar .box img {
+        width: 100%;
+    }
+
+    .similar .img-holder {
+        position: absolute;
+        width: 98%;
+        overflow: hidden;
+        padding: 0;
+        margin: 1%;
+    }
+
+
+    .similar div.effect-duke h4 {
+        position: absolute;
+        bottom: 0px;
+        left: 0;
+        margin: 1%;
+        padding: 10px 0;
+        width: 98%;
+        border: 0px;
+        text-transform: uppercase;
+        font-size: 90%;
+        opacity: 0;
+        -webkit-transform: scale3d(0.8,0.8,1);
+        transform: scale3d(0.8,0.8,1);
+        -webkit-transform-origin: 50% -100%;
+        background-color: rgba(0,0,0,0.17);
+        font-family: sans-serif;
+        font-weight: lighter;
+        text-align: center;
+    }
+
+    div.effect-duke:hover h4 {
+        opacity: 1;
+        -webkit-transform: scale3d(1,1,1);
+        transform: scale3d(1,1,1);
+    }
+
+    div.effect-duke img {
+        -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+        transition: opacity 1s, transform 0.35s;
+    }
+
+
+    div.effect-duke h4 {
+        -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+        transition: opacity 0.35s, transform 0.35s;
+    }
+
+    div.effect-duke:hover img {
+        -webkit-transform: scale3d(1.5,1.5,1.5);
+        transform: scale3d(1.5,1.5,1.5);
+    }
+
+/**END  products with similar colors box **/
