--- a/KoketSite/app/design/frontend/shopper/koket/template/customer/form/edit.phtml
+++ b/KoketSite/app/design/frontend/shopper/koket/template/customer/form/edit.phtml
@@ -43,7 +43,7 @@
                 </div>
             </li>
 
-            <?php //GERT: add link to scholen actie  ?>
+            <?php /*//GERT: add link to scholen actie  ?>
             <li><div class="message naaipatroon">
                     <h2>Terug-naar-school-actie maar dan een beetje anders</h2>
                     <p><br/>Volg je een naaiopleiding, ben je lid van een juwelen-hobbyclubje of ben je vaste klant in een naai- of ander hobbycafé?<br/>
@@ -53,7 +53,7 @@
                         <h2><br/><a class="a-btn" target="_blank" href="https://docs.google.com/forms/d/1-PZZWOEYdTosf-SIS3H4S6EdCiahgfyTWBnC5TdPGZc/viewform?entry.1305045249=<?php echo $this->getCustomer()->getFirstname() ?>&entry.1204152070=<?php echo $this->getCustomer()->getLastname() ?>&entry.370015783=<?php echo $this->escapeHtml($this->getCustomer()->getEmail()) ?>&entry.2079263237">Registreer je nu!</a></h2>
                     </p>
             </div></li>
-            <?php //GERT: END add link to scholen actie  ?>
+            <?php //GERT: END add link to scholen actie */ ?>
 
 
             <?php $_dob = $this->getLayout()->createBlock('customer/widget_dob') ?>
