--- a/KoketSite/app/design/frontend/shopper/koket/template/opc/customer/form/login.phtml
+++ b/KoketSite/app/design/frontend/shopper/koket/template/opc/customer/form/login.phtml
@@ -79,6 +79,8 @@
                         <button type="submit" class="button" title="<?php echo $this->__('Login') ?>" name="send" id="send2"><span><span><?php echo $this->__('Login') ?></span></span></button>
                         <button style="padding-left: 10px;" type="button" class="button" id="forgot" title="<?php echo $this->__('Forgot Your Password?') ?>" onclick="window.location='<?php echo $this->getForgotPasswordUrl() ?>'" > <span><span><?php echo $this->__('Forgot Your Password?') ?></span></span></button>
                     </div>
+                    <p>Problemen met inloggen? <a href="http://www.kokettekatinka.be/faq#inlogproblemen">Dit kan helpen</a>!</p>
+                    <p>&nbsp;</p>
                 </div>
             </div>
             <div class="col-2 new-users">
