--- a/KoketSite/skin/frontend/shopper/koket/css/override.css
+++ b/KoketSite/skin/frontend/shopper/koket/css/override.css
@@ -2042,3 +2042,7 @@ button.btn-shipping-info {
     }
 
 /**END  products with similar colors box **/
+
+p.volumekorting {
+    font-size: 1.0rem;
+}
